--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,10 @@ services:
       - "5678:5678"
     environment:
       - N8N_BASIC_AUTH_ACTIVE=false
-      - N8N_HOST=0.0.0.0
+      - N8N_HOST=n8n.fragments.com.br
       - N8N_PORT=5678
       - N8N_SECURE_COOKIE=false
+      - WEBHOOK_URL=https://n8n.fragments.com.br/
       - TZ=America/Sao_Paulo
     volumes:
       - ./n8n_data:/home/node/.n8n
